--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,12 @@
 {
   "name": "hot",
+  "preferGlobal": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack serve --mode development"
+    "serve": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +19,13 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
+    "hardhat": "^2.14.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "nodemon": "^2.0.22",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
