previous version wallet did not connect

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,18 @@ services:
   web:
     build: .
     ports:
-      - "80:80"
+      - "8545:8545"
       - "3000:3000"
       - "8080:8080"
     volumes:
-      - ./app/src:/app/src
-      - ./app/contracts:/app/contracts
       - ./app/test:/app/test
       - ./app/tasks:/app/tasks
+      - ./app/src:/app/src
       - ./app/scripts:/app/scripts
+      - ./app/contracts:/app/contracts
+      - ./app/frontend:/app/frontend  
       - ./app/package.json:/app/package.json
       - ./app/package-lock.json:/app/package-lock.json
       - ./app/hardhat.config:/app/hardhat.config
-      - ./app/webpack.config:/app/webpack.config
-#    environment:
-#      - WATCHPACK_POLLING=true
+    environment:
+      - WATCHPACK_POLLING=true
